--- a/css/main.scss
+++ b/css/main.scss
@@ -12,13 +12,13 @@ $base-line-height: 1.5;
 
 $spacing-unit:     30px;
 
-$text-color:       #111;
-$background-color: #fdfdfd;
-$brand-color:      #2a7ae2;
+$text-color:       #000000;
+$background-color: #ecf0f1;
+$brand-color:      #3498db;
 
 $grey-color:       #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark:  darken($grey-color, 25%);
+$grey-color-light: lighten($grey-color, 1%);
+$grey-color-dark:  darken($grey-color, 30%);
 
 // Width of the content area
 $content-width:    800px;
@@ -30,8 +30,8 @@ $on-laptop:        800px;
 // Use media queries like this:
 // @include media-query($on-palm) {
 //     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
+//         padding-right: $spacing-unit / 1;
+//         padding-left: $spacing-unit / 1;
 //     }
 // }
 
